# emv-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  crl.toml  terminal.toml
emv/: Cargo.toml  aids.toml  capk.toml  terminal.toml
emv/src/: config.rs  lib.rs
emv/src/contact/: application_selection.rs  card_action_analysis.rs  cardholder_verification.rs  dol_resolve.rs  mod.rs  online_processing.rs  processing_restrictions.rs  read_application_data.rs  terminal.rs  transaction.rs  transaction_driver.rs
emv/src/core/: apdu.rs  application_cryptogram.rs  card_block.rs  crl.rs  dol.rs  ec_sdsa.rs  ecc_oda.rs  ecc_pin_encipherment.rs  ecc_primitives.rs  extended_processing_options.rs  fci.rs  generate_ac.rs  get_challenge.rs  internal_authenticate.rs  issuer_authentication.rs  master_key_derivation.rs  mod.rs  oda.rs  pin_change_unblock.rs  pin_encipherment.rs  processing_options.rs  put_data.rs  read_record.rs  secure_messaging.rs  send_poi_information.rs  tag_info.rs  tags.rs  terminal_action_analysis.rs  tlv.rs
emv/src/de/: application_file_locator.rs  application_priority_indicator.rs  application_selection_indicator.rs  application_usage_control.rs  card_status_update.rs  cardholder_verification_method_list.rs  cardholder_verification_method_results.rs  common_core_identifier.rs  cryptogram_information_data.rs  issuer_application_data_format_a.rs  issuer_code_table_index.rs  kernel_identifier.rs  kernel_identifier_terminal.rs  mod.rs  payment_system_directory.rs  terminal_type.rs  transaction_status_information.rs
src/: config.rs  pcsc.rs
src/contact/: application_selection.rs  card_action_analysis.rs  cardholder_verification.rs  dol_resolve.rs  fci.rs  issuer_script.rs  mod.rs  oda_input.rs  online_processing.rs  processing_restrictions.rs  read_application_data.rs  terminal.rs  terminal_risk_management.rs  transaction.rs  transaction_driver.rs  transaction_flow.rs
src/core/: aes_primitives.rs  apdu.rs  application_block.rs  application_cryptogram_type.rs  application_unblock.rs  card_reader.rs  compressed_numeric.rs  ec_encryption.rs  ecc_biometric_encipherment.rs  ecc_oda.rs  ecc_primitives.rs  error.rs  external_authenticate.rs  get_challenge.rs  get_data.rs  iso9796_2.rs  issuer_authentication.rs  mod.rs  oda.rs  pin_encipherment.rs  select.rs  tag.rs  tag_store.rs  terminal_action_analysis.rs  un_generation.rs  verify.rs
src/de/: additional_terminal_capabilities.rs  mod.rs  (+20 more)
