[workspace]
resolver = "2"
members = ["emv"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["iohzrd <iohzrd@gmail.com>"]
license = "MIT"
rust-version = "1.95"

[workspace.dependencies]
# Cryptographic primitives (Book 2 / Book 2 Annex B)
aes = "0.9"
des = "0.9"
num-bigint = "0.4"
p256 = "0.13"
p521 = "0.13"
sha1 = "0.11"
sha2 = "0.11"

# Transport / IO / serde
pcsc = "2.9"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"
