[package]
name = "emv"
description = "Pure-Rust EMV 4.4 kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["pcsc"]
pcsc = ["dep:pcsc", "dep:rpassword"]
kernel-2 = []
kernel-3 = []
kernel-4 = []
kernel-5 = []
kernel-6 = []
kernel-7 = []
kernel-8 = []

[dependencies]
aes.workspace = true
des.workspace = true
num-bigint.workspace = true
p256.workspace = true
p521.workspace = true
sha1.workspace = true
sha2.workspace = true
serde.workspace = true
toml.workspace = true
pcsc = { workspace = true, optional = true }
rpassword = { workspace = true, optional = true }

[[bin]]
name = "emv-test-transaction"
path = "src/bin/test_transaction.rs"
required-features = ["pcsc"]